public class Cour{
    private String nom;
    private Integer volumeHoraire;
    private Enseignant responsable;


}