public class EnseignantPermanent{
    
}