public class EnseignantVacataire{
    
}